--- a/BathroomRater/res/layout/activity_selection_hub.xml
+++ b/BathroomRater/res/layout/activity_selection_hub.xml
@@ -1,16 +1,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.bathroomrater.SelectionHubActivity" >
 
+    <Button
+        android:id="@+id/bathroomButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Closest Bathroom" />
+
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bathroomButton"
+        android:layout_below="@+id/bathroomButton"
+        android:onClick="addBathroom"
+        android:text="Add Bathroom" />
+
+    <Button
+        android:id="@+id/buildingButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bathroomButton"
+        android:layout_alignLeft="@+id/bathroomButton"
+        android:text="Choose a Building" />
+
     <TextView
+        android:id="@+id/selhub_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="University"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
